--- a/src/core/styles/base/utilities/_functions.scss
+++ b/src/core/styles/base/utilities/_functions.scss
@@ -196,22 +196,22 @@
 
 @function igx-palette(
     $primary,
-    $accent,
+    $secondary,
     $info: #1377d5,
     $success: #4eb862,
     $warn: #fbb13c,
     $error: #ff134a
 ) {
     $primary-palette: _generate-palette($primary);
-    $accent-palette: _generate-palette($accent);
+    $secondary-palette: _generate-palette($secondary);
 
     // @debug 'Primary Colors Palette: #{$primary-palette}';
-    // @debug 'Accent Colors Palette: #{$accent-palette}';
+    // @debug 'secondary Colors Palette: #{$secondary-palette}';
     // @debug 'Warn Colors Palette: #{$warn-palette}';
 
     @return (
         primary: $primary-palette,
-        accent: $accent-palette,
+        secondary: $secondary-palette,
         info: (500: $info),
         success: (500: $success),
         warn: (500: $warn),
