--- a/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
+++ b/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
@@ -54,15 +54,15 @@ $components: register-component($components, #{$component-name});
     $default-theme: igx-grid-filtering-theme(
         $toggle-icon-color: inherit,
         $toggle-icon-hover-color: $white,
-        $toggle-icon-active-color: igx-contrast-color($palette, 'accent'),
-        $toggle-icon-filtered-color: igx-color($palette, 'accent'),
+        $toggle-icon-active-color: igx-contrast-color($palette, 'secondary'),
+        $toggle-icon-filtered-color: igx-color($palette, 'secondary'),
         $toggle-hover-background: igx-color($palette, 'grays', 300),
-        $toggle-active-background: igx-color($palette, 'accent'),
+        $toggle-active-background: igx-color($palette, 'secondary'),
         $toggle-filtered-background: transparent,
 
         $menu-background: $white,
         $menu-text-color: igx-color($palette, 'grays', 900),
-        $menu-button-text-color: igx-color($palette, 'accent')
+        $menu-button-text-color: igx-color($palette, 'secondary')
     );
 
     $this: extend($default-theme, $theme);
