--- a/src/core/styles/components/switch/_switch-theme.scss
+++ b/src/core/styles/components/switch/_switch-theme.scss
@@ -11,8 +11,8 @@ $components: register-component($components, #{$component-name});
 
 @mixin igx-switch($theme, $palette: $default-palette) {
     $default-theme: igx-switch-theme(
-        $thumb-color: igx-color($palette, 'accent'),
-        $track-color: rgba(igx-color($palette, 'accent'), .5)
+        $thumb-color: igx-color($palette, 'secondary'),
+        $track-color: rgba(igx-color($palette, 'secondary'), .5)
     );
 
     $this: extend($default-theme, $theme);
@@ -25,7 +25,7 @@ $components: register-component($components, #{$component-name});
     $input-font-weight: 400 !default;
     $input-color: igx-color($palette, 'grays', 900) !default;
     $input-border-color: igx-color($palette, 'grays', 500) !default;
-    $input-border-color-focus: igx-color($palette, 'accent') !default;
+    $input-border-color-focus: igx-color($palette, 'secondary') !default;
     $input-transition: all .2s ease-in !default;
     $input-disabled-color: igx-color($palette, 'grays', 500) !default;
 
