--- a/src/core/styles/typography/_typography.scss
+++ b/src/core/styles/typography/_typography.scss
@@ -2,7 +2,7 @@
     $font-family: map-get($config, 'font-family');
     $font-weight: 400;
     $font-weight-headings: 600;
-    $link-color: igx-color($default-palette, 'accent');
+    $link-color: igx-color($default-palette, 'secondary');
 
     // paragraph
     $paragraph-margin-top: 0;
