--- a/src/core/styles/components/button-group/_button-group-theme.scss
+++ b/src/core/styles/components/button-group/_button-group-theme.scss
@@ -134,15 +134,15 @@ $components: register-component($components, #{$component-name});
 
     // 26. Button Group
     // Group layout
-    $bgroup-radius: 2px !default;
+    $bgroup-radius: 2px;
     $bgroup-shadow: igx-elevation($elevations, 2);
     // Item style
-    $bgroup-item-minwidth: 24px !default;
-    $bgroup-item-minheight: 24px !default;
-    $bgroup-item-border-thickness: 1px !default;
-    $bgroup-item-font-weight: 600 !default;
+    $bgroup-item-minwidth: 24px;
+    $bgroup-item-minheight: 24px;
+    $bgroup-item-border-thickness: 1px;
+    $bgroup-item-font-weight: 600;
     // Margin between item elements
-    $bgroup-items-margin: rem(10px, 16px) !default;
+    $bgroup-items-margin: rem(10px, 16px);
     $this: extend($default-theme, $theme);
 
     %igx-bgroup-display {
