--- a/src/core/styles/base/_normalize.scss
+++ b/src/core/styles/base/_normalize.scss
@@ -7,7 +7,7 @@
  * Set to false if you want to drop support for IE6 and IE7
  */
 
-$legacy_browser_support: false !default;
+$legacy_browser_support: false;
 
 /* Base
    ========================================================================== */
