--- a/src/core/styles/components/calendar/_calendar-theme.scss
+++ b/src/core/styles/components/calendar/_calendar-theme.scss
@@ -159,38 +159,38 @@ $components: register-component($components, #{$component-name});
     $this: extend($default-theme, $theme);
 
     // Calendar Header
-    $cal-header-year-fs: em(18px, 16px) !default;
-    $cal-header-year-lh: em(16px, 16px) !default;
-    $cal-header-year-margin: 0 !default;
-    $cal-header-date-fs: em(38px, 16px) !default;
-    $cal-header-date-lh: em(16px, 16px) !default;
-    $cal-header-date-margin: 0 !default;
-    $cal-header-padding: em(24px) em(16px) !default;
-    $cal-header-year-color: rgba(map-get($this, 'header-text-color'), .8) !default;
+    $cal-header-year-fs: em(18px, 16px);
+    $cal-header-year-lh: em(16px, 16px);
+    $cal-header-year-margin: 0;
+    $cal-header-date-fs: em(38px, 16px);
+    $cal-header-date-lh: em(16px, 16px);
+    $cal-header-date-margin: 0;
+    $cal-header-padding: em(24px) em(16px);
+    $cal-header-year-color: rgba(map-get($this, 'header-text-color'), .8);
 
     // Calendar Picker
-    $cal-picker-date-fs: em(18px, 16px) !default;
-    $cal-picker-date-lh: em(22px, 16px) !default;
-    $cal-picker-date-fw: 600 !default;
-    $cal-picker-padding: em(24px, 16px) !default;
+    $cal-picker-date-fs: em(18px, 16px);
+    $cal-picker-date-lh: em(22px, 16px);
+    $cal-picker-date-fw: 600;
+    $cal-picker-padding: em(24px, 16px);
 
     // Calendar Values
-    $cal-value-w: rem(40px, 16px) !default;
+    $cal-value-w: rem(40px, 16px);
     $cal-value-h: $cal-value-w;
     $cal-value-br: $cal-value-w / 2;
-    $cal-value-margin: em(2px, 16px) !default;
-    $cal-value-fs: em(16px, 16px) !default;
-    $cal-value-lh: $cal-value-h !default;
-    $cal-value-fw: 600 !default;
+    $cal-value-margin: em(2px, 16px);
+    $cal-value-fs: em(16px, 16px);
+    $cal-value-lh: $cal-value-h;
+    $cal-value-fw: 600;
 
-    $cal-value-year-fs: em(18px, 16px) !default;
-    $cal-value-year-current-fs: em(24px, 16px) !default;
-    $cal-value-year-hover-fs: em(27px, 16px) !default;
-    $cal-value-month-margin: 0 em(12px, 16px) !default;
-    $cal-value-month-height: 91px !default;
+    $cal-value-year-fs: em(18px, 16px);
+    $cal-value-year-current-fs: em(24px, 16px);
+    $cal-value-year-hover-fs: em(27px, 16px);
+    $cal-value-month-margin: 0 em(12px, 16px);
+    $cal-value-month-height: 91px;
 
     // Calendar Body
-    $cal-row-padding: 0 rem(16px, 16px) !default;
+    $cal-row-padding: 0 rem(16px, 16px);
 
     %cal-display {
         display: flex;
