--- a/src/core/styles/components/dialog/_dialog-theme.scss
+++ b/src/core/styles/components/dialog/_dialog-theme.scss
@@ -37,25 +37,25 @@ $components: register-component($components, #{$component-name});
     $this: extend($default-theme, $theme);
 
     // 24. Dialog //
-    $dialog-transition: background .25s ease-out !default;
-    $dialog-max-width: em(400px) !default;
-    $dialog-min-width: em(280px) !default;
-    $dialog-padding: em(12px, 16px) em(24px, 16px) !default;
-    $dialog-background: $white !default;
-    $dialog-border-radius: 2px !default;
-    $dialog-title-font-size: em(20px, 16px) !default;
-    $dialog-title-line-height: em(16px, 16px) !default;
-    $dialog-title-padding: em(12px) 0 !default;
-    $dialog-title-padding-top: em(12px) !default;
-    $dialog-title-padding-bottom: em(10px) !default;
-    $dialog-title-font-weight: 600 !default;
-    $dialog-message-font-size: em(16px, 16px) !default;
-    $dialog-message-line-height: em(18px, 16px) !default;
-    $dialog-message-padding-top: em(10px) !default;
-    $dialog-message-padding-bottom: em(12px) !default;
-    $dialog-message-font-weight: 400 !default;
-    $dialog-actions-padding: em(8px) !default;
-    $dialog-actions-margin: 0 em(-24px, 16px) em(-12px, 16px) em(-24px, 16px) !default;
+    $dialog-transition: background .25s ease-out;
+    $dialog-max-width: em(400px);
+    $dialog-min-width: em(280px);
+    $dialog-padding: em(12px, 16px) em(24px, 16px);
+    $dialog-background: $white;
+    $dialog-border-radius: 2px;
+    $dialog-title-font-size: em(20px, 16px);
+    $dialog-title-line-height: em(16px, 16px);
+    $dialog-title-padding: em(12px) 0;
+    $dialog-title-padding-top: em(12px);
+    $dialog-title-padding-bottom: em(10px);
+    $dialog-title-font-weight: 600;
+    $dialog-message-font-size: em(16px, 16px);
+    $dialog-message-line-height: em(18px, 16px);
+    $dialog-message-padding-top: em(10px);
+    $dialog-message-padding-bottom: em(12px);
+    $dialog-message-font-weight: 400;
+    $dialog-actions-padding: em(8px);
+    $dialog-actions-margin: 0 em(-24px, 16px) em(-12px, 16px) em(-24px, 16px);
 
     %igx-dialog-display {
         display: flex;
