--- a/src/core/styles/typography/_typography.scss
+++ b/src/core/styles/typography/_typography.scss
@@ -7,51 +7,51 @@
     // paragraph
     $paragraph-margin-top: 0;
     $paragraph-margin-bottom: rem(27px);
-    $paragraph-line-height-desktop: rem(27px) !default;
-    $paragraph-line-height-phone: rem(22px) !default;
+    $paragraph-line-height-desktop: rem(27px);
+    $paragraph-line-height-phone: rem(22px);
     // H1
-    $h1-margin-top: rem(27px) !default;
+    $h1-margin-top: rem(27px);
     $h1-margin-bottom: rem(54px);
-    $h1-font-size-desktop: rem(48px) !default;
-    $h1-line-height-desktop: rem(54px) !default;
-    $h1-font-size-tablet: rem(40px) !default;
-    $h1-line-height-tablet: rem(45px) !default;
-    $h1-font-size-phone: rem(32px) !default;
-    $h1-line-height-phone: rem(40px) !default;
+    $h1-font-size-desktop: rem(48px);
+    $h1-line-height-desktop: rem(54px);
+    $h1-font-size-tablet: rem(40px);
+    $h1-line-height-tablet: rem(45px);
+    $h1-font-size-phone: rem(32px);
+    $h1-line-height-phone: rem(40px);
     // H2
     $h2-margin-top: rem(27px);
     $h2-margin-bottom: rem(27px);
-    $h2-font-size-desktop: rem(36px) !default;
-    $h2-line-height-desktop: rem(45px) !default;
-    $h2-font-size-tablet: rem(32px) !default;
-    $h2-line-height-tablet: rem(40px) !default;
-    $h2-font-size-phone: rem(26px) !default;
-    $h2-line-height-phone: rem(30px) !default;
+    $h2-font-size-desktop: rem(36px);
+    $h2-line-height-desktop: rem(45px);
+    $h2-font-size-tablet: rem(32px);
+    $h2-line-height-tablet: rem(40px);
+    $h2-font-size-phone: rem(26px);
+    $h2-line-height-phone: rem(30px);
     // H3
     $h3-margin-top: rem(27px);
     $h3-margin-bottom: 0;
-    $h3-font-size-desktop: rem(28px) !default;
-    $h3-line-height-desktop: rem(35px) !default;
-    $h3-font-size-tablet: rem(24px) !default;
-    $h3-line-height-tablet: rem(30px) !default;
-    $h3-font-size-phone: rem(22px) !default;
-    $h3-line-height-phone: rem(27px) !default;
+    $h3-font-size-desktop: rem(28px);
+    $h3-line-height-desktop: rem(35px);
+    $h3-font-size-tablet: rem(24px);
+    $h3-line-height-tablet: rem(30px);
+    $h3-font-size-phone: rem(22px);
+    $h3-line-height-phone: rem(27px);
     // H4
     $h4-margin-top: rem(27px);
     $h4-margin-bottom: 0;
-    $h4-font-size-desktop: rem(18px) !default;
-    $h4-line-height-desktop: rem(22px) !default;
-    $h4-font-size-tablet: rem(18px) !default;
-    $h4-line-height-tablet: rem(22px) !default;
-    $h4-font-size-phone: rem(22px) !default;
-    $h4-line-height-phone: rem(27px) !default;
+    $h4-font-size-desktop: rem(18px);
+    $h4-line-height-desktop: rem(22px);
+    $h4-font-size-tablet: rem(18px);
+    $h4-line-height-tablet: rem(22px);
+    $h4-font-size-phone: rem(22px);
+    $h4-line-height-phone: rem(27px);
     // Blockquote
-    $blockquote-font-size-desktop: rem(24px) !default;
-    $blockquote-line-height-desktop: rem(35px) !default;
-    $blockquote-font-size-tablet: rem(24px) !default;
-    $blockquote-line-height-tablet: rem(35px) !default;
-    $blockquote-font-size-phone: rem(20px) !default;
-    $blockquote-line-height-phone: rem(27px) !default;
+    $blockquote-font-size-desktop: rem(24px);
+    $blockquote-line-height-desktop: rem(35px);
+    $blockquote-font-size-tablet: rem(24px);
+    $blockquote-line-height-tablet: rem(35px);
+    $blockquote-font-size-phone: rem(20px);
+    $blockquote-line-height-phone: rem(27px);
 
     a {
         text-decoration: none;
