--- a/src/core/styles/components/switch/_switch-theme.scss
+++ b/src/core/styles/components/switch/_switch-theme.scss
@@ -29,8 +29,8 @@ $components: register-component($components, #{$component-name});
 
 @mixin igx-switch($theme, $palette: $default-palette) {
     $dark-theme: igx-switch-theme(
-        $thumb-on-color: igx-color($palette, 'accent', 500),
-        $track-on-color: rgba(igx-color($palette, 'accent', 500), .5),
+        $thumb-on-color: igx-color($palette, 'secondary', 500),
+        $track-on-color: rgba(igx-color($palette, 'secondary', 500), .5),
 
         $thumb-off-color: #fafafa,
         $track-off-color: rgba(0, 0, 0, .5),
@@ -40,8 +40,8 @@ $components: register-component($components, #{$component-name});
     );
 
     $light-theme: igx-switch-theme(
-        $thumb-on-color: igx-color($palette, 'accent', 200),
-        $track-on-color: rgba(igx-color($palette, 'accent', 200), .5),
+        $thumb-on-color: igx-color($palette, 'secondary', 200),
+        $track-on-color: rgba(igx-color($palette, 'secondary', 200), .5),
 
         $thumb-off-color: #bdbdbd,
         $track-off-color: rgba(255, 255, 255, .3),
@@ -62,23 +62,17 @@ $components: register-component($components, #{$component-name});
 
     // Defaults for all input controls
     // TODO: Rename to match component name
-    $input-font-size: em(16px) !default;
-    $input-font-weight: 400 !default;
-    $input-color: igx-color($palette, 'grays', 900) !default;
-    $input-border-color: igx-color($palette, 'grays', 500) !default;
-    $input-border-color-focus: igx-color($palette, 'accent') !default;
-    $input-transition: all .2s ease-in !default;
-    $input-disabled-color: igx-color($palette, 'grays', 500) !default;
-
-    $switch-color: transparent !default;
-    $switch-radius: 100px !default;
-    $switch-width: 35px !default;
-    $switch-height: 14px !default;
-    $switch-label-width: 20px !default;
-    $switch-label-height: $switch-label-width !default;
+    $input-font-size: em(16px) ;
+    $input-font-weight: 400 ;
+    $input-transition: all .2s ease-in ;
+    $switch-radius: 100px ;
+    $switch-width: 35px ;
+    $switch-height: 14px ;
+    $switch-label-width: 20px ;
+    $switch-label-height: $switch-label-width ;
     $switch-shadow: igx-elevation($elevations, 1);
     $switch-disabled-shadow: igx-elevation($elevations, 1);
-    $switch-margin: 0 16px !default;
+    $switch-margin: 0 16px ;
 
     %igx-switch-lbl-display {
         display: inline-block;
