refactor(icon): simplify the icon component
Much needed simplification of the icon component markup. Icon should now
interact with sibling elements as expected, without the need for
additional wrappers and alignment hacks. Prepwork for the icon sizing.

--- a/src/core/styles/components/icon/_icon-component.scss
+++ b/src/core/styles/components/icon/_icon-component.scss
@@ -2,6 +2,7 @@
     @extend %igx-icon-display !optional;
 
     @include m(inactive) {
+        @extend %igx-icon-display !optional;
         @extend %igx-icon--inactive !optional;
     }
 }
