--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,11 +1,7 @@
 <nav class="igx-navbar" role="navigation" [attr.aria-labelledby]="titleId">
     <div class="igx-navbar__left">
-        <span class="igx-navbar__left-btn" *ngIf="!isActionButtonVisible">
-            <igx-icon (click)="_triggerAction()" fontSet="material" [name]="actionButtonIcon"></igx-icon>
-        </span>
-        <span>
-            <h1 class="igx-navbar__title" [attr.id]="titleId">{{ title }}</h1>
-        </span>
+        <igx-icon (click)="_triggerAction()" fontSet="material" [name]="actionButtonIcon" *ngIf="!isActionButtonVisible"></igx-icon>
+        <h1 class="igx-navbar__title" [attr.id]="titleId">{{ title }}</h1>
     </div>
     <div class="igx-navbar__right">
         <ng-content></ng-content>
